--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,7 @@
     ],
     "initializeCommand": "powershell -NoProfile -Command \"$u=$env:USERPROFILE; if (-not [string]::IsNullOrEmpty($u)) { New-Item -ItemType Directory -Force -Path $u+'\\\\.cache\\\\huggingface',$u+'\\\\.cache\\\\torch',$u+'\\\\.kaggle',$u+'\\\\data' | Out-Null }\"",
     "features": {},
-    "postCreateCommand": "bash -lc \"set -euo pipefail; export UV_LINK_MODE=copy; export UV_VENV_CLEAR=1; if ! command -v uv >/dev/null 2>&1; then echo 'uv missing'; exit 1; fi; uv python install 3.12; uv venv --clear .venv -p 3.12; source .venv/bin/activate; uv sync --index-strategy unsafe-best-match --extra dev --extra notebook --extra torch-cu124; python -m ipykernel install --user --name torch_starter-3.12 --display-name \\\"Python 3.12 (torch_starter)\\\"; echo 'Post-create completed.'\"",
+    "postCreateCommand": "bash -lc \"source .venv/bin/activate && python -c 'import torch; print(f\\\"🚀 Environment ready! CUDA available: {torch.cuda.is_available()}\\\")' && echo '✅ Container startup completed in seconds instead of minutes!'\"",
     "customizations": {
         "vscode": {
             "extensions": [
