--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ notebook = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["torch_starter"]
+
 [tool.ruff]
 line-length = 100
 target-version = "py312"
