--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ dependencies = [
   "jupyter>=1.0",
   "ipykernel>=6.29",
   "pyyaml>=6.0",
-  "kaggle>=1.6"
+  "kaggle>=1.6",
+  "requests>=2.32.4",
+  "plotly",
 ]
 
 [project.optional-dependencies]
