--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,88 +1,127 @@
-# syntax=docker/dockerfile:1
+# syntax=docker/dockerfile:1.7
 
-# Ubuntu 24.04 base with optimized package installation at build time
-FROM mcr.microsoft.com/vscode/devcontainers/base:ubuntu-24.04 AS base
+# Multi-stage build for better caching and smaller final image
+FROM mcr.microsoft.com/vscode/devcontainers/base:ubuntu-24.04 AS base-deps
 
+# Build arguments for cache control
+ARG BUILDKIT_INLINE_CACHE=1
+ARG PYTHON_VERSION=3.12
+
+# Environment setup - consolidated for better layer caching
 ENV DEBIAN_FRONTEND=noninteractive \
-    UV_INSTALL_DIR=/usr/local/bin \
-    LANG=C.UTF-8 \
-    LC_ALL=C.UTF-8 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONUNBUFFERED=1
+    PYTHONUNBUFFERED=1 \
+    PYTHONFAULTHANDLER=1 \
+    PYTHONHASHSEED=random \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1 \
+    UV_INSTALL_DIR=/usr/local/bin \
+    UV_CACHE_DIR=/tmp/uv-cache \
+    LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8
 
-# Core OS dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    ca-certificates curl git git-lfs \
+# System dependencies - optimized layer with cleanup
+RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+    --mount=type=cache,target=/var/lib/apt,sharing=locked \
+    apt-get update && apt-get install -y --no-install-recommends \
+    # Essential tools
+    ca-certificates curl git git-lfs wget \
+    # Build tools (minimal set)
     build-essential pkg-config \
+    # SSH and process management
     openssh-client tini \
+    # Performance tools
+    htop iotop \
+    # Cleanup in same layer
     && rm -rf /var/lib/apt/lists/* \
     && git lfs install --system
 
-# Install uv (system-wide)
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh && uv --version
+# Install uv with cache mount for faster rebuilds
+RUN --mount=type=cache,target=/tmp/uv-install \
+    curl -LsSf https://astral.sh/uv/install.sh | sh \
+    && uv --version
 
-# App user: reuse existing 'vscode' user from base image
+# User setup
 ARG APP_USER=vscode
 ENV HOME=/home/${APP_USER}
 
-# Cache and data directories (will be bound to host volumes at runtime)
-ENV HF_HOME=${HOME}/.cache/huggingface \
-    TRANSFORMERS_CACHE=${HOME}/.cache/huggingface \
-    TORCH_HOME=${HOME}/.cache/torch \
-    KAGGLE_CONFIG_DIR=${HOME}/.kaggle \
-    DATA_DIR=/workspaces/data
+# Create all directories in single layer
+RUN mkdir -p \
+    ${HOME}/.cache/huggingface \
+    ${HOME}/.cache/torch \
+    ${HOME}/.cache/uv \
+    ${HOME}/.kaggle \
+    /workspaces/data \
+    /tmp/uv-cache \
+    && chown -R ${APP_USER}:${APP_USER} ${HOME} /workspaces
 
-RUN mkdir -p ${HF_HOME} ${TORCH_HOME} ${KAGGLE_CONFIG_DIR} ${DATA_DIR} && \
-    chown -R ${APP_USER}:${APP_USER} ${HOME} /workspaces
-
-# Declare volumes for host cache mounting
-VOLUME ["${HF_HOME}", "${TORCH_HOME}", "${KAGGLE_CONFIG_DIR}", "/workspaces/data"]
-
-# Set working directory and switch to app user
-WORKDIR /workspaces
+# Switch to user early
 USER ${APP_USER}
+WORKDIR /workspaces
 
-# Environment variables for uv optimization
+# Python environment setup stage
+FROM base-deps AS python-env
+
+# UV configuration for performance
 ENV UV_LINK_MODE=copy \
-    UV_VENV_CLEAR=1
+    UV_COMPILE_BYTECODE=1 \
+    UV_PYTHON_DOWNLOADS=manual
 
-# OPTIMIZATION: Copy dependency files first (cached layer unless dependencies change)
-COPY --chown=${APP_USER}:${APP_USER} pyproject.toml uv.lock README.md ./
+# Install Python with cache
+RUN --mount=type=cache,target=/tmp/uv-cache,uid=1000 \
+    uv python install ${PYTHON_VERSION}
 
-# OPTIMIZATION PHASE 1: Install Python and external dependencies only (cached unless dependencies change)
-RUN /bin/bash -euo pipefail -c " \
-    uv python install 3.12 && \
-    uv venv --clear .venv -p 3.12 && \
-    . .venv/bin/activate && \
-    uv sync --no-install-project --index-strategy unsafe-best-match --extra dev --extra notebook --extra torch-cu124 && \
-    echo '✅ External dependencies installed successfully'"
+# Dependency installation stage
+FROM python-env AS deps-install
 
-# OPTIMIZATION PHASE 2: Copy source code (this layer rebuilds when source changes, but deps are cached)
+# Copy dependency files first (better caching)
+COPY --chown=${APP_USER}:${APP_USER} pyproject.toml uv.lock ./
+
+# Create venv and install dependencies with cache mounting
+RUN --mount=type=cache,target=/tmp/uv-cache,uid=1000 \
+    --mount=type=cache,target=${HOME}/.cache/uv,uid=1000 \
+    uv venv --clear .venv -p ${PYTHON_VERSION} \
+    && . .venv/bin/activate \
+    && uv sync \
+    --no-install-project \
+    --index-strategy unsafe-best-match \
+    --extra dev \
+    --extra notebook \
+    --extra torch-cu124 \
+    --compile-bytecode \
+    && echo "External dependencies installed"
+
+# Final stage - minimal layers for runtime
+FROM deps-install AS final
+
+# Copy source code (separate layer for development)
 COPY --chown=${APP_USER}:${APP_USER} . .
 
-# OPTIMIZATION PHASE 2: Install local package as editable
-RUN /bin/bash -euo pipefail -c " \
-    . .venv/bin/activate && \
-    uv pip install -e . && \
-    echo '✅ Local package installed successfully'"
+# Install project and setup Jupyter kernel in single layer
+RUN . .venv/bin/activate \
+    && uv pip install -e . --compile-bytecode \
+    && python -m ipykernel install --user --name torch_starter-${PYTHON_VERSION} --display-name "Python ${PYTHON_VERSION} (torch_starter)" \
+    && echo "Project setup completed"
 
-# OPTIMIZATION: Setup Jupyter kernel at build time
-RUN /bin/bash -euo pipefail -c " \
-    . .venv/bin/activate && \
-    python -m ipykernel install --user --name torch_starter-3.12 --display-name 'Python 3.12 (torch_starter)' && \
-    echo '✅ Jupyter kernel installed'"
+# Quick validation (non-blocking)
+RUN . .venv/bin/activate \
+    && python -c "import sys; print(f'Python {sys.version}')" \
+    && python -c "import torch; print(f'PyTorch {torch.__version__}')" \
+    && python -c "import transformers; print(f'Transformers {transformers.__version__}')" \
+    || echo "Warning: Some packages may not be available"
 
-# Validate environment is working (but don't fail build if optional components missing)
-RUN /bin/bash -euo pipefail -c " \
-    . .venv/bin/activate && \
-    python -c \"import sys; print(f'Python {sys.version}')\" && \
-    python -c \"import torch; print(f'PyTorch {torch.__version__}')\" && \
-    python -c \"import transformers; print(f'Transformers {transformers.__version__}')\" && \
-    echo '✅ Environment validation completed'"
+# Runtime configuration
+EXPOSE 8888 8000 6006
 
-# Expose common ports
-EXPOSE 8888 8000
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD python -c "import torch" || exit 1
 
-# Proper signal handling
+# Optimized entrypoint
 ENTRYPOINT ["/usr/bin/tini", "--"]
-CMD ["/bin/bash"]
+CMD ["/bin/bash", "-l"]
+
+# Labels for better organization
+LABEL org.opencontainers.image.title="torch_starter"
+LABEL org.opencontainers.image.description="Optimized PyTorch development environment"
+LABEL org.opencontainers.image.version="2.0-optimized"
