--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,82 +1,146 @@
 [project]
 name = "torch-starter"
 version = "0.1.0"
-description = "Deep Learning starter template with uv, CUDA 12.4 PyTorch, and VS Code Dev Containers."
+description = "Optimized Deep Learning starter template with uv, CUDA 12.4 PyTorch, and VS Code Dev Containers."
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
 license = { text = "MIT" }
 authors = [{ name = "Your Name" }]
 keywords = ["deep-learning", "pytorch", "transformers", "uv", "devcontainer"]
 
-# Core libs (torch is installed separately with CUDA wheels in devcontainer postCreate)
+# Minimal core dependencies - only essentials for performance
 dependencies = [
-  "numpy>=1.26",
-  "pandas>=2.0",
-  "scipy>=1.11",
-  "scikit-learn>=1.3",
-  "tqdm>=4.66",
-  "transformers>=4.42",
-  "datasets>=2.19",
-  "accelerate>=0.31",
-  "sentencepiece>=0.1.99",
-  "safetensors>=0.4",
-  "tensorboard>=2.17",
-  "matplotlib>=3.8",
-  "seaborn>=0.13",
-  "jupyter>=1.0",
-  "ipykernel>=6.29",
-  "pyyaml>=6.0",
-  "kaggle>=1.6",
-  "requests>=2.32.4",
-  "plotly",
-  "pywavelets>=1.9.0",
-  "scikit-image>=0.25.2",
-  "viztracer"
+  # Core scientific computing
+  "numpy>=1.26,<2.0",
+  "pandas>=2.0,<3.0",
+  "scipy>=1.11,<2.0",
+  
+  # Machine learning essentials
+  "scikit-learn>=1.3,<2.0",
+  "tqdm>=4.66,<5.0",
+  
+  # Deep learning core
+  "transformers>=4.42,<5.0",
+  "datasets>=2.19,<3.0",
+  "accelerate>=0.31,<1.0",
+  "safetensors>=0.4,<1.0",
+  
+  # Tokenization
+  "sentencepiece>=0.1.99,<1.0",
+  
+  # Visualization (minimal)
+  "matplotlib>=3.8,<4.0",
+  
+  # Jupyter minimal
+  "jupyter>=1.0,<2.0",
+  "ipykernel>=6.29,<7.0",
+  
+  # Configuration and utilities
+  "pyyaml>=6.0,<7.0",
+  "requests>=2.32.0,<3.0",
 ]
 
 [project.optional-dependencies]
-# Installed with CUDA wheels using a special index-url in the devcontainer postCreate step
+# PyTorch with CUDA - separate for flexibility
 torch-cu124 = [
-  "torch",
-  "torchvision",
-  "torchaudio"
+  "torch>=2.0,<3.0",
+  "torchvision>=0.15,<1.0",
+  "torchaudio>=2.0,<3.0"
 ]
 
+# Development tools - minimal set
 dev = [
-  "ruff>=0.5.3",
-  "mypy>=1.10",
-  "pytest>=8.2",
-  "pytest-cov>=5.0",
-  "pre-commit>=3.7",
-  "types-requests",
-  "types-PyYAML",
-  "ipdb"
+  "ruff>=0.5.3,<1.0",
+  "mypy>=1.10,<2.0",
+  "pytest>=8.2,<9.0",
+  "pytest-cov>=5.0,<6.0",
+  "types-requests>=2.32,<3.0",
+  "types-PyYAML>=6.0,<7.0",
 ]
 
+# Extended data science tools (optional)
+datascience = [
+  "seaborn>=0.13,<1.0",
+  "plotly>=5.0,<6.0",
+  "scikit-image>=0.25.0,<1.0",
+  "pywavelets>=1.9.0,<2.0",
+]
+
+# Notebook and lab tools (optional)
 notebook = [
-  "jupyterlab>=4.2"
+  "jupyterlab>=4.2,<5.0",
+  "ipdb>=0.13,<1.0",
+]
+
+# Experiment tracking (optional)
+tracking = [
+  "tensorboard>=2.17,<3.0",
+  "wandb>=0.17,<1.0",
+]
+
+# Data acquisition (optional)
+data = [
+  "kaggle>=1.6,<2.0",
+]
+
+# Profiling tools (optional) 
+profiling = [
+  "viztracer>=0.16,<1.0",
+  "memory-profiler>=0.61,<1.0",
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling>=1.25.0"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["torch_starter"]
 
+# Ruff configuration - optimized
 [tool.ruff]
 line-length = 100
 target-version = "py312"
+extend-exclude = [
+    ".venv",
+    "__pycache__",
+    ".mypy_cache",
+    ".pytest_cache",
+    ".ruff_cache",
+    "build",
+    "dist",
+    "notebooks/.ipynb_checkpoints"
+]
 
 [tool.ruff.lint]
-select = ["E", "F", "I", "UP", "B", "A", "C90"]
-ignore = []
+select = [
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings  
+    "F",   # pyflakes
+    "I",   # isort
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
+    "A",   # flake8-builtins
+    "C90", # mccabe complexity
+]
+ignore = [
+    "E501",  # Line too long (handled by formatter)
+    "B008",  # Do not perform function calls in argument defaults
+]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
+[tool.ruff.lint.isort]
+known-first-party = ["torch_starter"]
+force-single-line = false
 
 [tool.ruff.format]
 preview = true
 quote-style = "double"
 indent-style = "space"
+skip-magic-trailing-comma = false
 
+# MyPy configuration - performance optimized
 [tool.mypy]
 python_version = "3.12"
 strict = true
@@ -88,42 +152,96 @@ disallow_any_unimported = true
 no_implicit_optional = true
 check_untyped_defs = true
 pretty = true
+
+# Performance optimizations
+cache_dir = ".mypy_cache"
+sqlite_cache = true
+incremental = true
+
 exclude = [
-  "build/",
-  "dist/",
-  "notebooks/",
-  ".venv/",
-  ".tox/",
-  ".mypy_cache/"
+    "build/",
+    "dist/", 
+    "notebooks/",
+    ".venv/",
+    ".mypy_cache/",
+    ".pytest_cache/",
+    "__pycache__/"
 ]
 
+# Skip type checking for heavy dependencies to improve performance
+[[tool.mypy.overrides]]
+module = [
+    "torch.*",
+    "torchvision.*", 
+    "transformers.*",
+    "datasets.*",
+    "matplotlib.*",
+    "seaborn.*",
+    "plotly.*",
+    "sklearn.*"
+]
+ignore_missing_imports = true
+
+# Pytest configuration
 [tool.pytest.ini_options]
 minversion = "7.0"
-addopts = "-q --disable-warnings"
+addopts = [
+    "-ra",
+    "--strict-markers",
+    "--disable-warnings",
+    "--tb=short"
+]
 testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
 
+# Coverage configuration
+[tool.coverage.run]
+source = ["torch_starter"]
+omit = [
+    "*/tests/*",
+    "*/test_*",
+    "*/__pycache__/*"
+]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if 0:",
+    "if __name__ == .__main__.:"
+]
+
+# UV configuration - performance optimized
 [tool.uv]
-# uv configuration for this project
-# preview = true
-"index-strategy" = "unsafe-best-match"
+index-strategy = "unsafe-best-match"
+resolution = "highest"
+compile-bytecode = true
+link-mode = "copy"
 
-# Primary index: PyPI (listed first so it wins for general packages like requests)
+# Primary index: PyPI
 [[tool.uv.index]]
 name = "pypi"
 url = "https://pypi.org/simple"
+default = true
 
-# Secondary index: PyTorch CUDA 12.4 wheels (used explicitly via sources below)
+# Secondary index: PyTorch CUDA wheels
 [[tool.uv.index]]
 name = "pytorch"
 url = "https://download.pytorch.org/whl/cu124"
 
+# Source routing for PyTorch packages
 [tool.uv.sources]
-# Route only torch packages to the PyTorch index; everything else resolves from PyPI
 torch = { index = "pytorch" }
-torchvision = { index = "pytorch" }
+torchvision = { index = "pytorch" }  
 torchaudio = { index = "pytorch" }
 
-# Force key ecosystem packages to resolve from PyPI to avoid partial mirrors on the PyTorch index
+# Ensure critical packages come from PyPI
 requests = { index = "pypi" }
-jupyterlab = { index = "pypi" }
-"jupyterlab-server" = { index = "pypi" }
+numpy = { index = "pypi" }
+pandas = { index = "pypi" }
