--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,33 +13,33 @@ dependencies = [
   "numpy>=1.26,<2.0",
   "pandas>=2.0,<3.0",
   "scipy>=1.11,<2.0",
-  
   # Machine learning essentials
   "scikit-learn>=1.3,<2.0",
   "tqdm>=4.66,<5.0",
-  
   # Deep learning core
   "transformers>=4.42,<5.0",
   "datasets>=2.19,<3.0",
   "accelerate>=0.31,<1.0",
   "safetensors>=0.4,<1.0",
-  
+  "torchvision>=0.21.0",
+  "torchaudio>=2.6.0",
+  "albumentations>=2.0.8",
   # Tokenization
   "sentencepiece>=0.1.99,<1.0",
-  
   # Visualization (minimal)
   "matplotlib>=3.8,<4.0",
-  
+  "plotly>=5.24.1",
+  "seaborn>=0.13.2",
   # Jupyter minimal
   "jupyter>=1.0,<2.0",
   "ipykernel>=6.29,<7.0",
-  
   # Configuration and utilities
   "pyyaml>=6.0,<7.0",
   "requests>=2.32.0,<3.0",
-  
+  "viztracer>=0.17.1",
   # Environment management
   "python-dotenv>=1.0,<2.0",
+  "memory-profiler>=0.61.0",
 ]
 
 [project.optional-dependencies]
@@ -54,6 +54,7 @@ torch-cu124 = [
 dev = [
   "ruff>=0.5.3,<1.0",
   "mypy>=1.10,<2.0",
+  "pydantic>=2.9.2",
   "pytest>=8.2,<9.0",
   "pytest-cov>=5.0,<6.0",
   "types-requests>=2.32,<3.0",
