--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,175 +1,148 @@
 {
-    "name": "torch_starter-optimized (CUDA 12.6, uv, Py3.12)",
-    "build": {
-        "dockerfile": "Dockerfile",
-        "context": "..",
-        "args": {
-            "TORCH_CUDA_EXTRA": "torch-cu126"
-        },
-        "options": [
-            "--build-arg",
-            "BUILDKIT_INLINE_CACHE=1"
-        ]
+  "name": "torch_starter-optimized (CUDA 12.6, uv, Py3.12)",
+  "build": {
+    "dockerfile": "Dockerfile",
+    "context": "..",
+    "args": {
+      "TORCH_CUDA_EXTRA": "torch-cu126"
     },
-    "runArgs": [
-        "--gpus",
-        "all",
-        "--shm-size=8g",
-        "--ulimit",
-        "memlock=-1",
-        "--ulimit",
-        "stack=67108864",
-        "--runtime=nvidia",
-        "--security-opt",
-        "no-new-privileges:true"
-    ],
-    "containerUser": "vscode",
-    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-    "containerEnv": {
-        "HF_HOME": "/home/vscode/.cache/huggingface",
-        "TRANSFORMERS_CACHE": "/home/vscode/.cache/huggingface",
-        "TORCH_HOME": "/home/vscode/.cache/torch",
-        "KAGGLE_CONFIG_DIR": "/home/vscode/.kaggle",
-        "UV_LINK_MODE": "copy",
-        "UV_COMPILE_BYTECODE": "1",
-        "PYTHONDONTWRITEBYTECODE": "1",
-        "CUDA_VISIBLE_DEVICES": "all",
-        "NVIDIA_VISIBLE_DEVICES": "all",
-        "NVIDIA_DRIVER_CAPABILITIES": "compute,utility",
-        "LD_LIBRARY_PATH": "/usr/local/cuda-12.6/lib64:${LD_LIBRARY_PATH}",
-        "CUDA_HOME": "/usr/local/cuda-12.6",
-        "PATH": "/home/vscode/.cargo/bin:${PATH}"
-    },
-    "mounts": [
-        {
-            "source": "torch-starter-hf-cache",
-            "target": "/home/vscode/.cache/huggingface",
-            "type": "volume"
-        },
-        {
-            "source": "torch-starter-torch-cache",
-            "target": "/home/vscode/.cache/torch",
-            "type": "volume"
-        },
-        {
-            "source": "torch-starter-kaggle-cache",
-            "target": "/home/vscode/.kaggle",
-            "type": "volume"
-        },
-        {
-            "source": "torch-starter-data",
-            "target": "/workspaces/${localWorkspaceFolderBasename}/data",
-            "type": "volume"
-        },
-        {
-            "source": "torch-starter-uv-cache",
-            "target": "/home/vscode/.cache/uv",
-            "type": "volume"
-        },
-        {
-            "source": "${localWorkspaceFolder}/.env.local",
-            "target": "/workspaces/${localWorkspaceFolderBasename}/.env.local",
-            "type": "bind",
-            "consistency": "cached"
-        }
-    ],
-    "initializeCommand": [
-        "bash",
-        "-c",
-        "docker volume create torch-starter-hf-cache 2>/dev/null || true; docker volume create torch-starter-torch-cache 2>/dev/null || true; docker volume create torch-starter-kaggle-cache 2>/dev/null || true; docker volume create torch-starter-data 2>/dev/null || true; docker volume create torch-starter-uv-cache 2>/dev/null || true; touch .env.local 2>/dev/null || true"
-    ],
-    "features": {
-        "ghcr.io/devcontainers/features/common-utils:2": {
-            "configureZshAsDefaultShell": true
-        },
-        "ghcr.io/devcontainers/features/git:1": {
-            "ppa": false,
-            "version": "os-provided"
-        }
-    },
-    "postCreateCommand": {
-        "activate-env": "bash -c 'source .venv/bin/activate && python -c \"import torch; print(f\\\"🚀 Environment ready! CUDA: {torch.cuda.is_available()}, Devices: {torch.cuda.device_count()}\\\")\"'",
-        "setup-git": "git config --global --add safe.directory /workspaces/${localWorkspaceFolderBasename}",
-        "setup-env": "bash -c '[ ! -f .env.local ] && cp templates/env.local .env.local && chmod 600 .env.local && echo \"📝 Created .env.local from template\" || echo \"✓ .env.local already exists\"'"
-    },
-    "customizations": {
-        "vscode": {
-            "extensions": [
-                "ms-python.python",
-                "ms-python.vscode-pylance",
-                "ms-toolsai.jupyter",
-                "charliermarsh.ruff",
-                "eamodio.gitlens",
-                "EditorConfig.EditorConfig",
-                "ms-azuretools.vscode-docker",
-                "RooVeterinaryInc.roo-cline",
-                "mechatroner.rainbow-csv",
-                "gaogaotiantian.viztracer-vscode",
-                "bierner.markdown-mermaid",
-                "github.vscode-github-actions"
-            ],
-            "settings": {
-                "python.defaultInterpreterPath": "/workspaces/${localWorkspaceFolderBasename}/.venv/bin/python",
-                "python.terminal.activateEnvironment": true,
-                "python.analysis.typeCheckingMode": "basic",
-                "python.analysis.autoImportCompletions": true,
-                "python.analysis.indexing": true,
-                "python.testing.pytestEnabled": true,
-                "python.testing.unittestEnabled": false,
-                "python.testing.pytestArgs": [
-                    "tests"
-                ],
-                "ruff.enable": true,
-                "ruff.organizeImports": true,
-                "ruff.serverEnabled": true,
-                "ruff.lint.enable": true,
-                "ruff.format.enable": true,
-                "files.watcherExclude": {
-                    "**/.venv/**": true,
-                    "**/__pycache__/**": true,
-                    "**/.mypy_cache/**": true,
-                    "**/.ruff_cache/**": true,
-                    "**/.pytest_cache/**": true,
-                    "**/node_modules/**": true
-                },
-                "search.exclude": {
-                    "**/.venv": true,
-                    "**/__pycache__": true,
-                    "**/.mypy_cache": true,
-                    "**/.ruff_cache": true
-                },
-                "files.exclude": {
-                    "**/.venv": false,
-                    "**/__pycache__": true,
-                    "**/.mypy_cache": true,
-                    "**/.ruff_cache": true,
-                    "**/.pytest_cache": true
-                },
-                "terminal.integrated.defaultProfile.linux": "zsh",
-                "terminal.integrated.shellIntegration.enabled": true,
-                "jupyter.askForKernelRestart": false,
-                "notebook.experimental.openGettingStarted": false,
-                "git.enableSmartCommit": true,
-                "git.autofetch": true,
-                "extensions.autoUpdate": false,
-                "telemetry.telemetryLevel": "off"
-            }
-        }
-    },
-    "remoteEnv": {
-        "ROO_CONFIG_PATH": "/workspaces/${localWorkspaceFolderBasename}/.roo/roo.json",
-        "MCP_SERVERS_CONFIG": "/workspaces/${localWorkspaceFolderBasename}/.mcp/servers.json"
-    },
-    "shutdownAction": "stopContainer",
-    "hostRequirements": {
-        "gpu": true,
-        "memory": "8gb",
-        "cpus": 4
-    },
-    "capAdd": [
-        "SYS_PTRACE"
-    ],
-    "securityOpt": [
-        "seccomp=unconfined"
+    "options": [
+      "--build-arg",
+      "BUILDKIT_INLINE_CACHE=1"
     ]
+  },
+  "runArgs": [
+    "--gpus", "all",
+    "--shm-size=8g",
+    "--ulimit", "memlock=-1",
+    "--ulimit", "stack=67108864",
+    "--runtime=nvidia",
+    "--security-opt", "no-new-privileges:true"
+  ],
+  "containerUser": "ubuntu",
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "containerEnv": {
+    "HF_HOME": "/home/vscode/.cache/huggingface",
+    "TRANSFORMERS_CACHE": "/home/vscode/.cache/huggingface",
+    "TORCH_HOME": "/home/vscode/.cache/torch",
+    "KAGGLE_CONFIG_DIR": "/home/vscode/.kaggle",
+    "UV_LINK_MODE": "copy",
+    "UV_COMPILE_BYTECODE": "1",
+    "PYTHONDONTWRITEBYTECODE": "1",
+    "CUDA_VISIBLE_DEVICES": "all",
+    "NVIDIA_VISIBLE_DEVICES": "all",
+    "NVIDIA_DRIVER_CAPABILITIES": "compute,utility",
+    "LD_LIBRARY_PATH": "/usr/local/cuda-12.6/lib64:${LD_LIBRARY_PATH}",
+    "CUDA_HOME": "/usr/local/cuda-12.6"
+  },
+  "mounts": [
+    { "source": "torch-starter-hf-cache", "target": "/home/vscode/.cache/huggingface", "type": "volume" },
+    { "source": "torch-starter-torch-cache", "target": "/home/vscode/.cache/torch", "type": "volume" },
+    { "source": "torch-starter-kaggle-cache", "target": "/home/vscode/.kaggle", "type": "volume" },
+    { "source": "torch-starter-data", "target": "/workspaces/${localWorkspaceFolderBasename}/data", "type": "volume" },
+    { "source": "torch-starter-uv-cache", "target": "/home/vscode/.cache/uv", "type": "volume" },
+    {
+      "source": "${localWorkspaceFolder}/.env.local",
+      "target": "/workspaces/${localWorkspaceFolderBasename}/.env.local",
+      "type": "bind",
+      "consistency": "cached"
+    }
+  ],
+  "initializeCommand": [
+    "bash", "-c",
+    "docker volume create torch-starter-hf-cache 2>/dev/null || true; \
+     docker volume create torch-starter-torch-cache 2>/dev/null || true; \
+     docker volume create torch-starter-kaggle-cache 2>/dev/null || true; \
+     docker volume create torch-starter-data 2>/dev/null || true; \
+     docker volume create torch-starter-uv-cache 2>/dev/null || true; \
+     touch .env.local 2>/dev/null || true"
+  ],
+  "features": {
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      "configureZshAsDefaultShell": true
+    },
+    "ghcr.io/devcontainers/features/git:1": {
+      "ppa": false,
+      "version": "os-provided"
+    }
+  },
+  "postCreateCommand": {
+    "activate-env": "bash -c 'source .venv/bin/activate && python -c \"import torch; print(f\\\"🚀 Environment ready! CUDA: {torch.cuda.is_available()}, Devices: {torch.cuda.device_count()}\\\")\"'",
+    "setup-git": "git config --global --add safe.directory /workspaces/${localWorkspaceFolderBasename}",
+    "setup-env": "bash -c '[ ! -f .env.local ] && cp templates/env.local .env.local && chmod 600 .env.local && echo \"📝 Created .env.local from template\" || echo \"✓ .env.local already exists\"'"
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-toolsai.jupyter",
+        "charliermarsh.ruff",
+        "eamodio.gitlens",
+        "EditorConfig.EditorConfig",
+        "ms-azuretools.vscode-docker",
+        "RooVeterinaryInc.roo-cline",
+        "mechatroner.rainbow-csv",
+        "gaogaotiantian.viztracer-vscode",
+        "bierner.markdown-mermaid",
+        "github.vscode-github-actions"
+      ],
+      "settings": {
+        "python.defaultInterpreterPath": "/workspaces/${localWorkspaceFolderBasename}/.venv/bin/python",
+        "python.terminal.activateEnvironment": true,
+        "python.analysis.typeCheckingMode": "basic",
+        "python.analysis.autoImportCompletions": true,
+        "python.analysis.indexing": true,
+        "python.testing.pytestEnabled": true,
+        "python.testing.unittestEnabled": false,
+        "python.testing.pytestArgs": ["tests"],
+        "ruff.enable": true,
+        "ruff.organizeImports": true,
+        "ruff.serverEnabled": true,
+        "ruff.lint.enable": true,
+        "ruff.format.enable": true,
+        "files.watcherExclude": {
+          "**/.venv/**": true,
+          "**/__pycache__/**": true,
+          "**/.mypy_cache/**": true,
+          "**/.ruff_cache/**": true,
+          "**/.pytest_cache/**": true,
+          "**/node_modules/**": true
+        },
+        "search.exclude": {
+          "**/.venv": true,
+          "**/__pycache__": true,
+          "**/.mypy_cache": true,
+          "**/.ruff_cache": true
+        },
+        "files.exclude": {
+          "**/.venv": false,
+          "**/__pycache__": true,
+          "**/.mypy_cache": true,
+          "**/.ruff_cache": true,
+          "**/.pytest_cache": true
+        },
+        "terminal.integrated.defaultProfile.linux": "zsh",
+        "terminal.integrated.shellIntegration.enabled": true,
+        "jupyter.askForKernelRestart": false,
+        "notebook.experimental.openGettingStarted": false,
+        "git.enableSmartCommit": true,
+        "git.autofetch": true,
+        "extensions.autoUpdate": false,
+        "telemetry.telemetryLevel": "off"
+      }
+    }
+  },
+  "remoteEnv": {
+    "ROO_CONFIG_PATH": "/workspaces/${localWorkspaceFolderBasename}/.roo/roo.json",
+    "MCP_SERVERS_CONFIG": "/workspaces/${localWorkspaceFolderBasename}/.mcp/servers.json"
+  },
+  "shutdownAction": "stopContainer",
+  "hostRequirements": {
+    "gpu": true,
+    "memory": "8gb",
+    "cpus": 4
+  },
+  "capAdd": ["SYS_PTRACE"],
+  "securityOpt": ["seccomp=unconfined"]
 }
